--- a/opencart/catalog/view/theme/bigshop/stylesheet/stylesheet.css
+++ b/opencart/catalog/view/theme/bigshop/stylesheet/stylesheet.css
@@ -1,3 +1,7 @@
+#payment-method {
+    display:none;
+}
+
 html { overflow: -moz-scrollbars-vertical; margin: 0; padding: 0; }
 body { background:#f8f8fa url(../image/patterns/10.png) left top repeat; color: #333; font-family: Arial, Helvetica, sans-serif; margin: 0px; padding: 0px; }
 body, td, th, input, textarea, select, a { font-size:12px; }
