--- a/opencart/catalog/view/theme/bigshop/stylesheet/stylesheet.css
+++ b/opencart/catalog/view/theme/bigshop/stylesheet/stylesheet.css
@@ -29,7 +29,15 @@ label { cursor: pointer; }
 /* header */
 #header { min-height:95px; position: relative; z-index: 99; background:#fff; padding:10px 0;}
 #header #logo { float:left; margin:10px 16px 0px 0px; }
-#header #welcome { color: #666; float:right; height:25px; line-height:25px; }
+
+#header #welcome { 
+    color: #666; 
+    float:right; 
+    height:25px; 
+    line-height:25px; 
+    margin: 0 -30px 0 0;
+}
+
 #header #welcome a, #language, #currency {  margin:0 7px; cursor:pointer; color:#666; text-decoration:none; text-transform:capitalize }
 #language { float:left; position:relative ; background:url(../image/bullet-d.png) right center no-repeat; padding-right:10px}
 #language img { cursor: pointer; margin-right:3px; }
@@ -55,9 +63,9 @@ label { cursor: pointer; }
 #header #cart .heading h4 { background:#F15A23; width:32px; height:32px; display:inline-block; float:left; margin:4px 2px 0 0; }
 #header #cart .heading a { text-decoration: none; font-size:14px; height:36px; float:left; color:#444; }
 #header #cart .heading a span { background:url('../image/bullet-d.png') right 13px no-repeat; padding-right: 12px; display:inline-block; margin-top:5px; }
-#header #cart .content { clear: both; display:none; position:absolute; padding:8px; min-height: 150px; border:1px solid #eee; background: #FFF; width:350px; right:0; top:35px; box-shadow:0 2px 8px rgba(0, 0, 0, 0.2); -moz-box-shadow:0 2px 8px rgba(0, 0, 0, 0.2); -webkit-box-shadow:0 2px 8px rgba(0, 0, 0, 0.2);}
+#header #cart .content { clear: both; display:none; z-index:90000; position:absolute; padding:8px; min-height: 150px; border:1px solid #eee; background: #FFF; width:350px; right:0; top:35px; box-shadow:0 2px 8px rgba(0, 0, 0, 0.2); -moz-box-shadow:0 2px 8px rgba(0, 0, 0, 0.2); -webkit-box-shadow:0 2px 8px rgba(0, 0, 0, 0.2);}
 #header #cart.active .heading{}
-#header #cart.active .content { display: block; }
+#header #cart.active .content { display: block; z-index:90000; }
 .mini-cart-info table { border-collapse: collapse; width: 100%; margin-bottom: 5px; }
 .mini-cart-info td { color: #000; vertical-align: top; padding: 10px 5px; border-bottom: 1px solid #EEEEEE; }
 .mini-cart-info .image { width: 1px; }
@@ -72,11 +80,50 @@ label { cursor: pointer; }
 .mini-cart-total td { color: #000; padding:2px; }
 #header #cart .checkout { text-align: right; clear: both; line-height:normal; }
 #header #cart .empty { padding-top: 50px; text-align: center; }
-#header #search { float:left; margin:32px 0 0 0; position:relative;}
-#header .button-search { background:url('../image/button-search.png') center center no-repeat; width:34px; height:34px; position:absolute; right:0; cursor: pointer; float:right; }
 
-#header #search input { background:#FFF; padding:0 10px; width:460px; height:32px; line-height:32px; font-size:16px; color:#333; border-radius:5px; -webkit-border-radius:5px; -moz-border-radius:5px; outline:none;}
-#header #search input:focus { box-shadow:0px 0px 2px rgba(0, 0, 0, 0.1) inset; -moz-box-shadow:0px 0px 2px rgba(0, 0, 0, 0.1) inset; -webkit-box-shadow:0px 0px 2px rgba(0, 0, 0, 0.1) inset; }
+#header #search { 
+    float:right; 
+    margin:6px 0 0 0; 
+    position:relative;
+}
+
+#header .button-search { 
+    background:url('../image/button-search.png') center center no-repeat; 
+    width:34px; 
+    height:34px; 
+    position:absolute; 
+    right:0; 
+    cursor: pointer; 
+    float:right; 
+}
+
+#header #search input { 
+    background:#FFF; 
+    padding:0 10px; 
+    width:354px; 
+    height:32px; 
+    line-height:32px; 
+    font-size:16px; 
+    color:#333; 
+    border-radius:5px; 
+    -webkit-border-radius:5px; 
+    -moz-border-radius:5px; 
+    outline:none;
+}
+
+#header #search input:focus { 
+    box-shadow:0px 0px 2px rgba(0, 0, 0, 0.1) inset; 
+    -moz-box-shadow:0px 0px 2px rgba(0, 0, 0, 0.1) inset; 
+    -webkit-box-shadow:0px 0px 2px rgba(0, 0, 0, 0.1) inset; 
+}
+
+#header #town {
+    float: left;
+    font-size: 18px;
+    margin: 73px 0 0;
+    position: absolute;
+}
+
 /* menu */
 #menu { background:url(../image/menu.png) left top repeat #444; margin-bottom:15px; height:40px; padding:0px 5px; border-radius:5px; -webkit-border-radius:5px; -moz-border-radius:5px;}
 li.home { margin:0 0 0 5px; }
@@ -186,7 +233,7 @@ a.button:hover, input.button:hover { background:#444; color:#fff; -webkit-transi
 
 
 /*	Category boxes
-	-------------------------------------------------- */
+        -------------------------------------------------- */
 .box-category { }
 .box-category ul, .list-item { list-style: none; margin: 0; padding: 0; }
 .box-category > ul > li, .list-item > li { border-top: 1px solid #eee; display: block; position: relative; }
@@ -431,7 +478,7 @@ a.wishlist:hover { color:#F15A23; }
 #footer:after{clear:both; content: ' ' ; height:0;}
 #footer .column { float: left; position:relative; }
 #footer .column + .column { margin-left:15px; }
-#footer .column ul {= bottom:40px; width:150px; padding:5px 5px; }
+#footer .column ul {= bottom:40px; width:170px; padding:5px 5px; }
 #footer .column:hover ul { display:block; }
 #footer .column ul li { list-style-type:none; }
 #footer .column a { text-decoration: none; color: #999; display:block; padding:0px 5px; height:20px; line-height:20px; -webkit-border-radius:2px; -moz-border-radius:2px; -khtml-border-radius:2px; border-radius:2px; font-size:12px; }
@@ -459,107 +506,107 @@ a.wishlist:hover { color:#F15A23; }
 .w30{width:30px!important; text-align:center;}
 
 @media screen and (max-width:1024px) {
-#header #search{margin:8px 0 0 0;}
-#header #search input{width:460px;}
-.social-part{overflow:hidden;}
-.contact ul li{margin-bottom:0px;}
-.box-product > div, .product-grid > div{margin-right:2px;}
-.main-wrapper{margin: 15px 15px 0 15px;}
-#footer{margin: 0 15px 15px 15px;}
-.product-info .cart div{float:none; margin-bottom: 10px;}
- }
-@media screen and (max-width:320px) {
-#header #welcome a, #language, #currency{margin:0 4px; font-size:11px;}
-#powered{line-height:20px!important; height:auto!important;}
-.product-info{overflow:hidden!important;}
-.htabs a{font-size:11px; padding:7px 5px 6px 5px;}
-#header #cart .content{width:250px;}
- }
-@media screen and (max-width:480px) {
- #currency span, #language span { display:none; }
-.product-info .image a img {width:100%;}
-#header #welcome a, #language, #currency, #header .links{font-size:11px; margin: 0 5px;}
-.main-wrapper{padding:0 10px;}
-#header #search input{width: 93%!important;}
-.flex-control-nav, .flex-direction-nav li a.prev:hover{display:none!important;}
-.contact{text-align:center}
-.contact ul li{width:auto!important;}
-.category-list ul { float: none; width:auto; margin-right:0px;}
-.product-info .review > div {overflow:inherit;}
+    #header #search{margin:8px 0 0 0;}
+    #header #search input{width:354px;}
+    .social-part{overflow:hidden;}
+    .contact ul li{margin-bottom:0px;}
+    .box-product > div, .product-grid > div{margin-right:2px;}
+    .main-wrapper{margin: 15px 15px 0 15px;}
+    #footer{margin: 0 15px 15px 15px;}
+    .product-info .cart div{float:none; margin-bottom: 10px;}
 }
- @media screen and (max-width:768px) {
-body { -webkit-text-size-adjust: auto; }
-.wrapper { margin:0px 0 0 0; box-shadow:none; -moz-box-shadow:none; -webkit-box-shadow:none; }
- .wrapper, #footer, #header, .header-top, .fpart { width:auto!important; }
- #container{  width:none!important;}
-#header { min-height:auto; text-align:center; margin:0 auto; padding:10px 0 6px 0;}
-#header #logo { float:none; margin:0; padding:20px 10px;}
-.home, .banner, #column-right, #column-left, .back-to-top, .header-top #cart, .slideshow { display:none!important; }
-#header #welcome{width:100%; float:none;}
-h1, .welcome { text-align:center }
-.login-content .left, .login-content .right, .checkout-content .left, .checkout-content .right { width:auto!important; float:none; }
-.login-content .left .content, .login-content .right .content{min-height:inherit }
-input[type="text"], input[type="password"], textarea { width:96%; }
-select { width:99%; }
-.breadcrumb a { font-size:11px; margin-bottom:10px; display:inline-block }
-#header #search{float:none; padding:0 0 10px 0; width:100%; margin:0;}
-#header #search input{width:96%;}
-#header .button-search{position:absolute; float:none; right:0}
-#header #cart {position:relative; display:inline-block; bottom:0;}
-#header #cart:after{visibility:hidden; display: block; font-size: 0; content: " "; clear: both; height: 0;}
-#header #cart .heading{padding:0; margin:0 auto; float:none; display:inline-block;}
-#header #cart .content{z-index:1011; position:relative; top:0;}
-#menu { padding:0; height:auto; text-align:center;}
-#menu > ul > li { float:none; padding:0px;}
-#menu > span { text-transform:uppercase; font-size:16px; padding:0px 15px 0px 8px; height:45px; line-height:45px; text-align:center; margin:0; cursor: pointer; display:inline-block; color:#444; background:url(../image/arrow-down.png) no-repeat right center;}
-#menu > ul { display:none; text-align:left; background:#fff!important; box-shadow:0 2px 8px rgba(0, 0, 0, 0.2); position:relative; z-index:9;}
-#menu > ul > li > div { display:block; position:inherit; z-index:auto; border:1px solid #ddd; border-width:1px 0px 0px 0px; box-shadow:none!important; margin:0!important; background:none!important; }
-#menu > ul > li > div > ul > li > a{color:#333!important}
-#menu > ul > li > div > ul > li > a:hover{background:#eee!important}
-#menu > ul > li > a:hover{background:#fff!important}
-#menu > ul > li > div > ul { display:inline; padding:0; }
-#menu > ul > li:hover > div { display: block; }
-#menu > ul > li > a { color:#222!important; line-height:30px; border-bottom:1px solid #eee; margin-top:2px; background:#eee!important;}
-#footer {padding:0!important;}
-#footer .column { float:none; width:auto; margin:0!important; display:inline; }
-#footer h3{ cursor:pointer; display:block; text-align:center; padding:0px 0;  border-top:1px dashed #444444; height:32px; line-height:32px;}
-#footer .column:hover ul { display:none; }
-#footer .column ul {display:none; position:relative; bottom:0px; width:auto;}
-#footer .column ul li { text-align:center; }
-#footer .info { width:auto; display:inline; float:none; }
-#footer .info h3 { padding:5px 0; }
-#footer .about-text { display:none; text-align:center; padding:0 10px; }
-.social_wrap { display:none!important; }
-#powered { text-align:center; width:100%; border-top:1px dashed #444444; height:auto!important;}
-#powered .fl { float:none; }
-#column-right + #content { margin-right:0!important; }
-#column-left + #content { margin-left:0!important; }
-#column-left + #column-right + #content, #column-left + #content{margin-left:0!important; }
-.product-list .left { width:auto; float:none; }
-.social { float:none; margin-bottom:10px; text-align:center; clear:both;}
-.social h3 { display:none!important; }
-#footer .column a { font-size:13px; }
-.jcarousel-skin-opencart { display:none!important; }
-.product-info > .left { float:none; text-align:center; margin-right:0px; }
-.product-info > .left + .right { margin-left:auto ; text-align:center;}
-.product-info .image { float:none;}
-.mousetrap { width:99%; }
-.product-info .image-additional { width:auto; margin-bottom:10px; max-width:none; }
-.product-info .image-additional a { display:inline-block; float:none; }
-.product-info .cart div { margin-bottom:10px; float:none;}
-.product-grid, .box, .box-product { text-align:center; }
-.cart-info thead .price, .cart-info tbody .price { display:none; }
-.sitemap-info .left, .sitemap-info .right, #content .content .left, #content .content .right, .return-comment, .return-captcha, .manufacturer-list ul, .order-list .order-content div { float:none; width:auto }
-.wishlist-product thead td { font-size:11px; }
-.cart-info thead .model, .cart-info tbody .model, .wishlist-product thead .model, .wishlist-product thead .stock, .wishlist-product tbody .model, .wishlist-product tbody .stock { display:none; }
-.mobile-name { display:block!important; }
-.mobile-rating img { width:70px; }
-.mobile-search { margin-bottom:10px; }
-#footer-top-outside { display:none; }
-.pagination{text-align:center; margin-bottom:0;}
-.pagination .links{float:none;}
-.pagination .results{float:none; margin-top:5px;}
-.box .box-heading span{padding:0 30px;}
-.box-product > div, .product-grid > div{margin-right:10px;}
+@media screen and (max-width:320px) {
+    #header #welcome a, #language, #currency{margin:0 4px; font-size:11px;}
+    #powered{line-height:20px!important; height:auto!important;}
+    .product-info{overflow:hidden!important;}
+    .htabs a{font-size:11px; padding:7px 5px 6px 5px;}
+    #header #cart .content{width:250px;}
+}
+@media screen and (max-width:480px) {
+    #currency span, #language span { display:none; }
+    .product-info .image a img {width:100%;}
+    #header #welcome a, #language, #currency, #header .links{font-size:11px; margin: 0 5px;}
+    .main-wrapper{padding:0 10px;}
+    #header #search input{width: 93%!important;}
+    .flex-control-nav, .flex-direction-nav li a.prev:hover{display:none!important;}
+    .contact{text-align:center}
+    .contact ul li{width:auto!important;}
+    .category-list ul { float: none; width:auto; margin-right:0px;}
+    .product-info .review > div {overflow:inherit;}
+}
+@media screen and (max-width:768px) {
+    body { -webkit-text-size-adjust: auto; }
+    .wrapper { margin:0px 0 0 0; box-shadow:none; -moz-box-shadow:none; -webkit-box-shadow:none; }
+    .wrapper, #footer, #header, .header-top, .fpart { width:auto!important; }
+    #container{  width:none!important;}
+    #header { min-height:auto; text-align:center; margin:0 auto; padding:10px 0 6px 0;}
+    #header #logo { float:none; margin:0; padding:20px 10px;}
+    .home, .banner, #column-right, #column-left, .back-to-top, .header-top #cart, .slideshow { display:none!important; }
+    #header #welcome{width:100%; float:none;}
+    h1, .welcome { text-align:center }
+    .login-content .left, .login-content .right, .checkout-content .left, .checkout-content .right { width:auto!important; float:none; }
+    .login-content .left .content, .login-content .right .content{min-height:inherit }
+    input[type="text"], input[type="password"], textarea { width:96%; }
+    select { width:99%; }
+    .breadcrumb a { font-size:11px; margin-bottom:10px; display:inline-block }
+    #header #search{float:none; padding:0 0 10px 0; width:100%; margin:0;}
+    #header #search input{width:96%;}
+    #header .button-search{position:absolute; float:none; right:0}
+    #header #cart {position:relative; display:inline-block; bottom:0;}
+    #header #cart:after{visibility:hidden; display: block; font-size: 0; content: " "; clear: both; height: 0;}
+    #header #cart .heading{padding:0; margin:0 auto; float:none; display:inline-block;}
+    #header #cart .content{z-index:1011; position:relative; top:0;}
+    #menu { padding:0; height:auto; text-align:center;}
+    #menu > ul > li { float:none; padding:0px;}
+    #menu > span { text-transform:uppercase; font-size:16px; padding:0px 15px 0px 8px; height:45px; line-height:45px; text-align:center; margin:0; cursor: pointer; display:inline-block; color:#444; background:url(../image/arrow-down.png) no-repeat right center;}
+    #menu > ul { display:none; text-align:left; background:#fff!important; box-shadow:0 2px 8px rgba(0, 0, 0, 0.2); position:relative; z-index:9;}
+    #menu > ul > li > div { display:block; position:inherit; z-index:auto; border:1px solid #ddd; border-width:1px 0px 0px 0px; box-shadow:none!important; margin:0!important; background:none!important; }
+    #menu > ul > li > div > ul > li > a{color:#333!important}
+    #menu > ul > li > div > ul > li > a:hover{background:#eee!important}
+    #menu > ul > li > a:hover{background:#fff!important}
+    #menu > ul > li > div > ul { display:inline; padding:0; }
+    #menu > ul > li:hover > div { display: block; }
+    #menu > ul > li > a { color:#222!important; line-height:30px; border-bottom:1px solid #eee; margin-top:2px; background:#eee!important;}
+    #footer {padding:0!important;}
+    #footer .column { float:none; width:auto; margin:0!important; display:inline; }
+    #footer h3{ cursor:pointer; display:block; text-align:center; padding:0px 0;  border-top:1px dashed #444444; height:32px; line-height:32px;}
+    #footer .column:hover ul { display:none; }
+    #footer .column ul {display:none; position:relative; bottom:0px; width:auto;}
+    #footer .column ul li { text-align:center; }
+    #footer .info { width:auto; display:inline; float:none; }
+    #footer .info h3 { padding:5px 0; }
+    #footer .about-text { display:none; text-align:center; padding:0 10px; }
+    .social_wrap { display:none!important; }
+    #powered { text-align:center; width:100%; border-top:1px dashed #444444; height:auto!important;}
+    #powered .fl { float:none; }
+    #column-right + #content { margin-right:0!important; }
+    #column-left + #content { margin-left:0!important; }
+    #column-left + #column-right + #content, #column-left + #content{margin-left:0!important; }
+    .product-list .left { width:auto; float:none; }
+    .social { float:none; margin-bottom:10px; text-align:center; clear:both;}
+    .social h3 { display:none!important; }
+    #footer .column a { font-size:13px; }
+    .jcarousel-skin-opencart { display:none!important; }
+    .product-info > .left { float:none; text-align:center; margin-right:0px; }
+    .product-info > .left + .right { margin-left:auto ; text-align:center;}
+    .product-info .image { float:none;}
+    .mousetrap { width:99%; }
+    .product-info .image-additional { width:auto; margin-bottom:10px; max-width:none; }
+    .product-info .image-additional a { display:inline-block; float:none; }
+    .product-info .cart div { margin-bottom:10px; float:none;}
+    .product-grid, .box, .box-product { text-align:center; }
+    .cart-info thead .price, .cart-info tbody .price { display:none; }
+    .sitemap-info .left, .sitemap-info .right, #content .content .left, #content .content .right, .return-comment, .return-captcha, .manufacturer-list ul, .order-list .order-content div { float:none; width:auto }
+    .wishlist-product thead td { font-size:11px; }
+    .cart-info thead .model, .cart-info tbody .model, .wishlist-product thead .model, .wishlist-product thead .stock, .wishlist-product tbody .model, .wishlist-product tbody .stock { display:none; }
+    .mobile-name { display:block!important; }
+    .mobile-rating img { width:70px; }
+    .mobile-search { margin-bottom:10px; }
+    #footer-top-outside { display:none; }
+    .pagination{text-align:center; margin-bottom:0;}
+    .pagination .links{float:none;}
+    .pagination .results{float:none; margin-top:5px;}
+    .box .box-heading span{padding:0 30px;}
+    .box-product > div, .product-grid > div{margin-right:10px;}
 
 }
